namespaces/live.cloud-platform.service.justice.gov.uk/laa-apply-for-criminal-legal-aid-preprod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-apply-for-criminal-legal-aid-preprod"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "preprod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-crime-apply"
    cloud-platform.justice.gov.uk/application: "Apply for criminal legal aid"
    cloud-platform.justice.gov.uk/owner: "Crime Apply and Review: laacrimeapply@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-apply-for-criminal-legal-aid"
    cloud-platform.justice.gov.uk/team-name: "laa-crime-apply"
    cloud-platform.justice.gov.uk/review-after: ""
